--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+nav {
+  height: 50px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav--DD {
+  width: 40px;
+  padding-left: 30px;
+  text-shadow: 10px 10px rgba(0, 0, 0, 0.1);
+  float: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.servers {
+  width: 40px;
+  padding-left: 30px;
+  text-shadow: 10px 10px rgba(0, 0, 0, 0.1);
+  float: left;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.list {
+  list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+.right-links{
+  display: inline-block;
+  padding: 20px;
+  width: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
