--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,37 @@
+body{
+  background-color: #202C33;
+}
+
 nav {
-  height: 50px;
+  height: 80px;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+  background-color: #608799;
 }
 
 .nav--DD {
-  width: 40px;
+  width: 75px;
   padding-left: 30px;
+  padding-top: 8px;
   text-shadow: 10px 10px rgba(0, 0, 0, 0.1);
   float: left;
 }
 
 .servers {
-  width: 40px;
-  padding-left: 30px;
+  border: none; 
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
   text-shadow: 10px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin-left: 30px;
+  margin-top: 15px;
   float: left;
+}
+.servers:hover{
+  cursor: pointer;
 }
 
 .list {
   list-style: none;
-}
-
-.right-links{
-  display: inline-block;
-  padding: 20px;
-  width: 20px;
 }
 
