--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@ body{
 
 nav {
   height: 80px;
-  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1); */
   background-color: #608799;
+  border:10px solid #202C33;
 }
 
 .nav--DD {
@@ -16,22 +17,152 @@ nav {
   float: left;
 }
 
-.servers {
-  border: none; 
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  text-shadow: 10px 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  margin-left: 30px;
-  margin-top: 15px;
-  float: left;
-}
-.servers:hover{
-  cursor: pointer;
-}
-
 .list {
   list-style: none;
 }
 
+.button-servers {
+  border: none; 
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  text-align: center;
+  margin-left: 30px;
+  margin-top: 15px;
+  float: left;
+  box-shadow: 0px 4px 5px #466b7a;
+  font-family: 'Roboto', sans-serif;
+  /* --------------------------------------- */
+  transition: all .5s ease;
+  color: #fff;
+  border: 3px solid white;
+  font-family:'Montserrat', sans-serif;
+  text-transform: uppercase;
+  line-height: 1;
+  font-size: 17px;
+  background-color : transparent;
+  outline: none;
+}
+.button-servers:hover {
+  cursor: pointer;
+  color: #001F3F;
+  background-color: #fff;
+} 
+
+.help-settings-list{
+  float: right;
+  margin: 20px;
+  margin-top: 27px;
+  list-style: none;
+  font-family: 'Roboto', sans-serif;
+}
+.help-settings-link{
+  color: white;
+}
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+a:active {
+  text-decoration: none;
+}
+
+.logout{
+  float: right;
+  margin: 20px;
+  margin-bottom: 20px;
+  background-color: white;
+  padding: 10px 22px;
+  font-size:  15px;
+  border: none;
+  color: #608799;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+}
+
+.dropdown-btn{
+  margin: 0;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  appearance: none;
+  background-color: inherit;
+}
+.dropdown-icon{
+  width: 28px;
+  margin-top: 25px;
+  margin-left: 30px;
+}
+
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  font-family: 'Roboto', sans-serif;
+}
+.dropdown-content a{
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover{background-color: #ddd;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+.Message-Div{
+  background-color: #718087;
+  width: 77vw;
+  height: 50vw;
+  border: 8px solid #202C33;
+  float: right;
+}
+
+.PlayerMenu-Div{
+  background-color: #47565E;
+  width: 20vw;
+  height: 50vw;
+  border: 8px solid #202C33;
+  box-sizing: 1px solid;
+  float: left;
+  position: relative;
+}
+
+.profile-div{
+  position: absolute;
+  top: 10%;
+  transform: translateY(-70%);
+  margin-left: 35%;
+}
+.duck-btn{
+  border: none; 
+  height: 110px;
+  width: 110px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  appearance: none;
+}
+.duck-img{width: 50px;}
+
+.name-text{
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+}
+.name-div{
+  padding-left: 115px;
+  padding-top: 140px;
+}
