5-added the rest of divs

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ a:active {
   color: #608799;
   cursor: pointer;
   font-family: 'Roboto', sans-serif;
+  border-radius: 4px;
 }
 
 .dropdown-btn{
@@ -123,9 +124,9 @@ a:active {
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
 .Message-Div{
-  background-color: #718087;
+  background-color: #7B888E;
   width: 77vw;
-  height: 50vw;
+  height: 45vw;
   border: 8px solid #202C33;
   float: right;
 }
@@ -133,7 +134,7 @@ a:active {
 .PlayerMenu-Div{
   background-color: #47565E;
   width: 20vw;
-  height: 50vw;
+  height: 45vw;
   border: 8px solid #202C33;
   box-sizing: 1px solid;
   float: left;
@@ -159,10 +160,56 @@ a:active {
 
 .name-text{
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif, bold;
   font-size: 20px;
+  font-weight: bold;
 }
 .name-div{
   padding-left: 115px;
   padding-top: 140px;
+}
+
+.awesomechat-div{
+  margin: 0 auto;
+  width: 90%;
+  height: 75%;
+  background-color: #E6EAEC;
+  border-radius: 25px;
+  margin-top: 25px;
+}
+
+.conversation-div{
+  margin: 0 auto;
+  width: 90%;
+  height: 82%;
+  background-color: #E6EAEC;
+  border-radius: 25px;
+  margin-top: 2%;
+}
+
+.typemessage-div{
+  margin: 0 auto;
+  width: 90%;
+  height: 10%;
+  background-color: #E6EAEC;
+  border-radius: 25px;
+  margin-top: 1%;
+}
+
+.chats-div{
+  margin: 0 auto;
+  width: 100%;
+  height: 48%;
+  background-color: #E6EAEC;
+  border-radius: 25px;
+  margin-top: 2%;
+}
+
+.playerstatus-div{
+  margin: 0 auto;
+  width: 100%;
+  height: 49%;
+  background-color: #E6EAEC;
+  border-radius: 25px;
+  margin-top: 2%;
 }
