--- a/src/App.css
+++ b/src/App.css
@@ -200,7 +200,7 @@ a:active {
   margin: 0 auto;
   width: 100%;
   height: 48%;
-  background-color: #E6EAEC;
+  background-color: #21bd2e;
   border-radius: 25px;
   margin-top: 2%;
 }
@@ -209,7 +209,7 @@ a:active {
   margin: 0 auto;
   width: 100%;
   height: 49%;
-  background-color: #E6EAEC;
+  background-color: #187fb3;
   border-radius: 25px;
   margin-top: 2%;
 }
